@@ -1,3 +1,11 @@
+2006-01-26  Jeroen Dekkers  <jeroen@dekkers.cx>
+
+	* i386/i386/locore.S (trap_push_segs): Switch fs and gs to kernel
+	data segment too.
+	(syscall_entry_2): Likewise.
+	* i386/i386/user_ldt.c (i386_set_ldt): Always copy the master LDT
+	when there is no old user LDT.
+
 2006-01-26  Samuel Thibault  <samuel.thibault@ens-lyon.org>
 
 	* linux/dev/arch/i386/kernel/irq.c (linux_intr): Disable interrupts
